testdata/baselines/reference/submodule/compiler/es6ImportDefaultBinding.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
es6ImportDefaultBinding_1.ts(1,28): error TS2307: Cannot find module 'es6ImportDefaultBinding_0' or its corresponding type declarations.
es6ImportDefaultBinding_1.ts(3,29): error TS2307: Cannot find module 'es6ImportDefaultBinding_0' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== es6ImportDefaultBinding_0.ts (0 errors) ====
    var a = 10;
    export default a;
    
==== es6ImportDefaultBinding_1.ts (2 errors) ====
    import defaultBinding from "es6ImportDefaultBinding_0";
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBinding_0' or its corresponding type declarations.
    var x = defaultBinding;
    import defaultBinding2 from "es6ImportDefaultBinding_0"; // elide this import since defaultBinding2 is not used
                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportDefaultBinding_0' or its corresponding type declarations.
    